--- a/views/src/styles/component.scss
+++ b/views/src/styles/component.scss
@@ -1,3 +1,5 @@
+@import "common.scss";
+
 button {
   cursor: pointer;
 }
@@ -54,4 +56,8 @@ input[type="checkbox"] {
 }
 .login_big_img {
   width: 100%;
+}
+
+.logo_img {
+  width: 15%;
 }
