--- a/views/src/styles/common.scss
+++ b/views/src/styles/common.scss
@@ -9,6 +9,8 @@ $color7: #f0f2e7;
 $color8: #c2d991;
 $color9: #84ac67;
 $color0: #688c1b;
+$colorWhite: white;
+$colorBlack: black;
 
 // Font Section
 @font-face {
@@ -18,4 +20,67 @@ $color0: #688c1b;
   font-display: swap;
   src: local("Pretendard Variable"),
     url("./font/PretendardVariable.woff2") format("woff2-variations");
+}
+
+// Common Component
+input[type="checkbox"] {
+  cursor: pointer;
+}
+
+input[type="email"],
+input[type="password"] {
+  border-radius: 5px;
+  width: 80%;
+  height: 20px;
+}
+
+button {
+  cursor: pointer;
+  color: $color6;
+  background-color: $color1;
+}
+
+button:hover {
+  color: $color1;
+  background-color: $color6;
+}
+
+.chat_send_Message {
+  border-radius: 5px;
+  flex: 1;
+  height: 20px;
+}
+
+.chat_send_btn {
+  width: 8%;
+  border-radius: 5px;
+  padding: 3px 5px;
+}
+
+.login_regist_btn {
+  margin: 0 10px;
+  border-radius: 5px;
+  padding: 3px 5px;
+  background-color: $color2;
+  color: $colorWhite;
+}
+.login_btn:hover {
+  color: $color2;
+  background-color: $colorWhite;
+}
+
+.forget_password_lbl {
+  cursor: pointer;
+  font-size: 1em;
+}
+.forget_password_lbl:hover {
+  color: blue;
+  font-size: 1.05em;
+}
+.login_big_img {
+  width: 100%;
+}
+
+.logo_img {
+  width: 15%;
 }
