--- a/views/src/styles/common.scss
+++ b/views/src/styles/common.scss
@@ -32,12 +32,20 @@ input[type="password"] {
   border-radius: 5px;
   width: 80%;
   height: 20px;
+  border: 0px;
+}
+
+input[type="text"] {
+  border-radius: 5px;
+  border: 0px;
 }
 
 button {
   cursor: pointer;
   color: $color6;
   background-color: $color1;
+  border-radius: 5px;
+  border: 0px;
 }
 
 button:hover {
@@ -45,42 +53,12 @@ button:hover {
   background-color: $color6;
 }
 
-.chat_send_Message {
+div {
+  padding: 5px;
   border-radius: 5px;
-  flex: 1;
-  height: 20px;
 }
 
-.chat_send_btn {
-  width: 8%;
+label {
+  padding: 5px;
   border-radius: 5px;
-  padding: 3px 5px;
-}
-
-.login_regist_btn {
-  margin: 0 10px;
-  border-radius: 5px;
-  padding: 3px 5px;
-  background-color: $color2;
-  color: $colorWhite;
-}
-.login_btn:hover {
-  color: $color2;
-  background-color: $colorWhite;
-}
-
-.forget_password_lbl {
-  cursor: pointer;
-  font-size: 1em;
-}
-.forget_password_lbl:hover {
-  color: blue;
-  font-size: 1.05em;
-}
-.login_big_img {
-  width: 100%;
-}
-
-.logo_img {
-  width: 15%;
 }
