--- a/views/src/styles/style.scss
+++ b/views/src/styles/style.scss
@@ -25,9 +25,12 @@ section {
 .header_box {
   display: flex;
   justify-content: space-between;
-
   height: 10%;
   margin-bottom: 8px;
+
+  div {
+    border: 0px;
+  }
 
   .account_info_box {
     text-align: center;
@@ -61,7 +64,7 @@ section {
 .main_box {
   display: flex;
   justify-content: space-around;
-  background-color: $color9;
+  background-color: $color8;
   height: 100%;
   padding: 10px;
 
@@ -72,7 +75,7 @@ section {
   .chatList_box {
     font-family: "PretendardVariable";
     flex: 2;
-    background-color: $color2;
+    background-color: $colorWhite;
   }
   .chat_box {
     flex: 5;
@@ -84,7 +87,7 @@ section {
     .chat_target_box {
       height: 5%;
       text-align: center;
-      background-color: $color3;
+      background-color: $color5;
     }
 
     .chat_content_box {
@@ -94,10 +97,25 @@ section {
       max-height: 500px;
     }
     .chat_send_Message_box {
+      border: 0px;
       height: 7%;
       display: flex;
       justify-content: center;
       align-items: center;
+
+      .chat_send_Message {
+        flex: 1;
+        height: 30px;
+        margin: auto 2px;
+      }
+
+      .chat_send_btn {
+        margin: auto 2px;
+        width: 8%;
+        height: 30px;
+        padding: 3px 5px;
+        font-size: 1em;
+      }
     }
   }
 }
@@ -108,6 +126,10 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
+
+  div {
+    border: 0px;
+  }
 
   .box {
     background-color: $colorWhite;
@@ -122,6 +144,10 @@ section {
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    img {
+      width: 100%;
+    }
   }
   .login_content {
     background-color: $color8;
@@ -142,6 +168,29 @@ section {
       width: 80%;
       display: flex;
       justify-content: space-between;
+
+      label {
+        cursor: pointer;
+        font-size: 1em;
+      }
+      label:hover {
+        color: blue;
+        font-size: 1.05em;
+      }
+    }
+
+    .btn_box {
+      button {
+        margin: 0 10px;
+        padding: 3px 5px;
+        background-color: $color2;
+        color: $colorWhite;
+      }
+
+      button:hover {
+        color: $color2;
+        background-color: $colorWhite;
+      }
     }
   }
 }
@@ -156,41 +205,22 @@ section {
   background-color: rgba(0, 0, 0, 0.6);
 }
 
-// 정리 할 스타일
-
-.chat_send_Message {
-  flex: 1;
-  height: 20px;
+.logo_box {
+  img {
+    width: 15%;
+  }
 }
 
-.chat_send_btn {
-  width: 8%;
-  padding: 3px 5px;
-}
-
-.login_regist_btn {
-  margin: 0 10px;
-  padding: 3px 5px;
-  background-color: $color2;
-  color: $colorWhite;
-}
-.login_btn:hover {
-  color: $color2;
-  background-color: $colorWhite;
-}
-
-.forget_password_lbl {
-  cursor: pointer;
-  font-size: 1em;
-}
-.forget_password_lbl:hover {
-  color: blue;
-  font-size: 1.05em;
-}
-.login_big_img {
-  width: 100%;
-}
-
-.logo_img {
-  width: 15%;
+.icon_ul {
+  list-style: none;
+  li {
+    display: inline-block;
+    padding: 5px;
+  }
+  label {
+    cursor: pointer;
+  }
+  img {
+    width: 30px;
+  }
 }
