--- a/views/src/styles/style.scss
+++ b/views/src/styles/style.scss
@@ -1,27 +1,5 @@
 @import "common.scss";
 
-#root {
-  border: 0px;
-}
-
-main {
-  width: 100%;
-  margin: 8px auto;
-  height: 90vh;
-  display: flex;
-  flex-direction: column;
-  border: 0px;
-}
-
-header {
-  height: 50px;
-}
-
-section {
-  width: 100%;
-  flex: 1;
-}
-
 .main {
   width: 100%;
   height: 100%;
@@ -32,6 +10,10 @@ section {
   justify-content: space-between;
   height: 10%;
   margin-bottom: 8px;
+
+  &:hover {
+    border: $color1 solid 2px;
+  }
 
   div {
     border: 0px;
@@ -57,16 +39,12 @@ section {
       width: 100%;
       cursor: pointer;
       color: navy;
-    }
 
-    label:hover {
-      color: white;
-      background-color: $color8;
+      &:hover {
+        color: white;
+        background-color: $color8;
+      }
     }
-  }
-
-  .account_info_box:hover {
-    border: $color1 solid 2px;
   }
 }
 
@@ -103,20 +81,20 @@ section {
 
       .friends_lbl {
         border: $color3 solid 2px;
-      }
-      .friends_lbl:hover {
-        border: $color1 solid 3px;
-        background-color: $color3;
-        color: $colorWhite;
+        &:hover {
+          border: $color1 solid 3px;
+          background-color: $color3;
+          color: $colorWhite;
+        }
       }
 
       .room_lbl {
         border: $color8 solid 2px;
-      }
-      .room_lbl:hover {
-        border: $color9 solid 3px;
-        background-color: $color8;
-        color: $colorWhite;
+        &:hover {
+          border: $color9 solid 3px;
+          background-color: $color8;
+          color: $colorWhite;
+        }
       }
     }
 
@@ -238,10 +216,11 @@ section {
       label {
         cursor: pointer;
         font-size: 1em;
-      }
-      label:hover {
-        color: blue;
-        font-size: 1.05em;
+
+        &:hover {
+          color: $colorPoint1;
+          font-size: 1.05em;
+        }
       }
     }
 
@@ -251,11 +230,11 @@ section {
         padding: 3px 5px;
         background-color: $color2;
         color: $colorWhite;
-      }
 
-      button:hover {
-        color: $color2;
-        background-color: $colorWhite;
+        &:hover {
+          color: $color2;
+          background-color: $colorWhite;
+        }
       }
     }
   }
