--- a/views/src/styles/style.scss
+++ b/views/src/styles/style.scss
@@ -100,17 +100,24 @@
     .chatList_contents {
       flex: 1;
       padding: 0px;
-      div {
-        height: 100%;
-        padding: 0px;
-      }
 
       .chatList_friends {
+        height: 100%;
+        padding: 0px;
         border: $color3 solid 2.5px;
         display: flex;
         flex-direction: column;
         align-items: center;
         padding-top: 10px;
+
+        div {
+          color: $color9;
+          width: 90%;
+          padding-top: 10px;
+          padding: 5px;
+          border: none;
+        }
+
         ul {
           width: 90%;
           padding-top: 10px;
