Feat :modify Login

--- a/views/src/styles/style.scss
+++ b/views/src/styles/style.scss
@@ -232,6 +232,7 @@
     padding: 10px;
     display: flex;
     justify-content: space-between;
+    border: solid 1px $color0;
   }
   .image_box {
     flex: 1;
