--- a/views/src/styles/style.scss
+++ b/views/src/styles/style.scss
@@ -8,7 +8,7 @@
 .header_box {
   display: flex;
   justify-content: space-between;
-  height: 10%;
+  height: 10vh;
   margin-bottom: 8px;
 
   div {
@@ -51,7 +51,7 @@
   display: flex;
   justify-content: space-around;
   background-color: $color8;
-  height: 100%;
+  height: 80vh;
   padding: 10px;
 
   div {
